<resources>
    <string name="app_name">AlarmEngineerManagement</string>
    <string name="company_name">A.E.M</string>
    <string name="company_slogan">Management Systems</string>

    <!-- Login strings -->
    <string name="login">Login</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="fill_in_all_fields_error">Please fill in all fields.</string>

    <!-- Home Strings -->
    <string name="loading_modules">Loading modules…</string>
    <string name="failed_to_load_modules_error">Failed to load modules.</string>
    <string name="no_modules_found_error">No Modules Found</string>

    <!-- Client strings -->
    <string name="failed_to_clients_error">Failed to load clients.</string>
    <string name="no_clients_found_error">No Clients found.</string>
    <string name="loading_clients">Loading clients…</string>
    <string name="customers">Customers</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="total_jobs">Total Jobs</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="account_number">A/N</string>
    <string name="mobile">Mobile</string>
    <string name="landline">Landline</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="system_details">System details</string>

</resources>
