<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/clients_item_height"
    android:layout_marginTop="@dimen/padding_size_normal"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_client_name"
            style="@style/Text.AEM.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_size_normal"
            android:paddingTop="@dimen/padding_size_small"
            android:paddingEnd="@dimen/padding_size_normal"
            android:paddingBottom="@dimen/padding_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Daniels Electronics" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_customer_count"
            style="@style/Text.AEM.Heading5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/text_active_job_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_client_name"
            tools:text="32" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_active_job_count"
            style="@style/Text.AEM.Heading5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/text_total_job_count"
            app:layout_constraintStart_toEndOf="@id/text_customer_count"
            app:layout_constraintTop_toBottomOf="@id/text_client_name"
            tools:text="20" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_total_job_count"
            style="@style/Text.AEM.Heading5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_active_job_count"
            app:layout_constraintTop_toBottomOf="@id/text_client_name"
            tools:text="10" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.AEM.Caption.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customers"
            app:layout_constraintEnd_toEndOf="@id/text_customer_count"
            app:layout_constraintStart_toStartOf="@id/text_customer_count"
            app:layout_constraintTop_toBottomOf="@id/text_customer_count" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.AEM.Caption.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_jobs"
            app:layout_constraintEnd_toEndOf="@id/text_active_job_count"
            app:layout_constraintStart_toStartOf="@id/text_active_job_count"
            app:layout_constraintTop_toBottomOf="@id/text_active_job_count" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.AEM.Caption.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_jobs"
            app:layout_constraintEnd_toEndOf="@id/text_total_job_count"
            app:layout_constraintStart_toStartOf="@id/text_total_job_count"
            app:layout_constraintTop_toBottomOf="@id/text_total_job_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
